Aggiornato package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "matteomanzinello-client",
+  "name": "matteomanzinello.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
