--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.13.1",
     "netlify-lambda": "^1.3.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "rsuite": "^3.7.5"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
