--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.18.2",
+    "mailgo": "^0.5.0",
     "netlify-lambda": "^1.4.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
