--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/dark-theme": "^0.2.0",
     "antd": "^3.19.1",
     "mailgo": "^0.6.0",
     "netlify-lambda": "^1.4.13",
