--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@ant-design/dark-theme": "^0.2.0",
     "antd": "^3.19.1",
-    "mailgo": "^0.6.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "mailgo": "^0.6.2",
     "netlify-lambda": "^1.4.13",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
