--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "less-loader": "^5.0.0",
     "mailgo": "^0.6.8",
     "netlify-lambda": "^1.4.13",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
