--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,8 @@
 [[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+[[redirects]]
   from = "https://matteomanzinello.netlify.com/*"
   to = "https://matteomanzinello.com/:splat"
   status = 301
