updated description and manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Matteo Manzinello",
-  "name": "Matteo Manzinello, freelance developer",
+  "name": "Matteo Manzinello, creative and freelance developer",
   "start_url": ".",
   "display": "standalone"
 }
