--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/dark-theme": "^0.2.2",
     "@sentry/browser": "^5.6.3",
     "antd": "^3.23.1",
+    "clipboard": "^2.0.4",
     "eva-icons": "^1.1.1",
     "mailgo": "^0.6.9",
     "netlify-lambda": "^1.6.3",
