--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,15 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
 [[redirects]]
   from = "https://matteomanzinello.netlify.com/*"
   to = "https://matteomanzinello.com/:splat"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "https://matteomanzinello.com/tiamo"
+  to = "https://ilariaberetta.com"
   status = 301
   force = true
