--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/dark-theme": "^1.0.3",
+    "@fab-ulous/github": "^0.1.4",
     "@sentry/browser": "^5.6.3",
     "antd": "^3.23.6",
     "clipboard": "^2.0.4",
