--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "@ant-design/icons": "^4.0.5",
     "@fab-ulous/github": "^0.1.8",
     "@sentry/browser": "^5.15.4",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.0",
+    "@types/react": "^16.9.32",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.3",
     "antd": "^4.0.2",
     "clipboard": "^2.0.6",
     "eva-icons": "^1.1.3",
@@ -20,7 +25,8 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
