--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,12 @@
   to = "https://matteomanzinello.com/:splat"
   status = 301
   force = true
+  
+[[redirects]]
+  from = "https://matteomanzinello.netlify.app/*"
+  to = "https://matteomanzinello.com/:splat"
+  status = 301
+  force = true
 
 [[redirects]]
   from = "https://matteo.manzinello.com/*"
