--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mailgo": "^0.8.5",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
