--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "noEmit": true,
     "jsx": "preserve"
   },
-  "include": ["src"],
+  "include": ["src", "global.d.ts", "react-app-env.d.ts"],
   "exclude": ["node_modules"]
 }
