--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "rewired-test": "react-app-rewired test",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "eslintConfig": {
     "extends": "react-app"
