--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "antd": "^4.4.0",
-    "mailgo": "../mailgo/mailgo-0.9.1.tgz",
+    "mailgo": "^0.9.2",
     "next": "^9.4.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
