--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@fab-ulous/github": "^0.1.9",
-    "@sentry/browser": "^5.27.1",
+    "@sentry/browser": "^5.27.2",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.5",
-    "@types/react": "^16.9.54",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
@@ -17,12 +17,12 @@
     "mailgo": "^0.10.4",
     "next": "^10.0.0",
     "node-forge": "^0.10.0",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-ga": "^3.2.0",
     "react-scripts": "4.0.0",
+    "sass": "^1.28.0",
     "typescript": "^4.0.5"
   },
   "scripts": {
