--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@fab-ulous/github": "^0.1.9",
     "@sentry/browser": "^5.29.0",
     "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.12",
+    "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
-    "antd": "^4.9.2",
+    "antd": "^4.9.3",
     "mailgo": "^0.11.2",
     "next": "^10.0.3",
     "node-forge": "^0.10.0",
@@ -23,7 +23,7 @@
     "react-ga": "^3.3.0",
     "react-scripts": "4.0.1",
     "sass": "^1.30.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "netlify-build": "next build && next export",
@@ -38,5 +38,8 @@
   "browserslist": [
     "defaults"
   ],
-  "devDependencies": {}
+  "devDependencies": {},
+  "peerDependencies": {
+    "ini": "2.0.0"
+  }
 }
