--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@fab-ulous/github": "^0.1.9",
-    "@sentry/browser": "^5.29.0",
+    "@sentry/browser": "^5.29.2",
     "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.13",
+    "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
-    "antd": "^4.9.3",
+    "antd": "^4.9.4",
     "mailgo": "^0.11.2",
     "next": "^10.0.3",
     "node-forge": "^0.10.0",
@@ -40,6 +40,7 @@
   ],
   "devDependencies": {},
   "peerDependencies": {
-    "ini": "2.0.0"
+    "ini": "2.0.0",
+    "node-notifier": "9.0.0"
   }
 }
